testsuite/tests/properties/invalid_eq/bool_entity/test.lkt
from common import FooNode

class Example: FooNode {
    @exported fun prop(): Bool = true == self
}
